# l5r-card-provider-bot

./: .gitignore  pyproject.toml
l5r_bot/: api.py  main.py
